Widgets / Motif Edit: Drawing Tools: bugs fixed in <WgMiniColourPicker>  - Issue where the React-wrapped mini-picker would trigger its own re-render function on-colour move, causing itself to close. Fixed using a JavaScript Timout which blocks such an occurance for a short period. This is a bit of an ugly workaround though.  - mini colour picker sliders may display incorrectly if parent CSS text-align is set different to 'center'  - <MotfEdit_Section_MotifCanvas> - componentShouldUpdate() is a bit more discerning.

--- a/react-pgt/public/css/Motf/MotfEdit_Section_DrawingTools.css
+++ b/react-pgt/public/css/Motf/MotfEdit_Section_DrawingTools.css
@@ -47,7 +47,8 @@
 }
 
 .colourPickers .colorpicker{
-    text-align: center;
+    text-align: left; /* v. important to override this back vs. parent component*/
+    /* otherwise, slider placement becomes distorted. */
     position: relative;
     left: 5px;
 }
